
[TestMerge/should_populate_mergeProps_with_NewAppendRoot_for_root-only_append - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "mergeable"
 ],
 "props": {
  "mergeable": {
   "key": "val"
  },
  "normal": "value"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestMerge/it_should_suppress_deepMergeProps_and_matchPropsOn_for_reset_keys_when_DeepMerge_is_set - 1]
{
 "component": "TestComponent",
 "props": {
  "settings": {
   "theme": "dark"
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestMerge/it_should_ignore_empty_append,_prepend_and_matchOn_path_segments - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "posts.data",
  "posts.items"
 ],
 "props": {
  "posts": {
   "data": [
    "one"
   ],
   "items": [
    "two"
   ]
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestMerge/it_should_qualify_matchOn_keys_with_the_prop_root_when_matchOn_paths_are_non-empty - 1]
{
 "component": "TestComponent",
 "matchPropsOn": [
  "conversation.messages.id"
 ],
 "mergeProps": [
  "conversation.messages"
 ],
 "props": {
  "conversation": {
   "messages": [
    "one"
   ]
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestMerge/it_should_populate_deepMergeProps_and_matchPropsOn_when_NewDeepMerge_is_set - 1]
{
 "component": "TestComponent",
 "deepMergeProps": [
  "settings"
 ],
 "matchPropsOn": [
  "settings.key"
 ],
 "props": {
  "settings": {
   "theme": "dark"
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestMerge/it_should_suppress_root-level_merge_entry_when_path-based_append_keys_are_present - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "conversation.messages"
 ],
 "props": {
  "conversation": {
   "messages": [
    "one"
   ]
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestMerge/should_suppress_mergeProps_and_matchPropsOn_for_reset_keys_while_still_returning_the_value - 1]
{
 "component": "TestComponent",
 "props": {
  "name": "Roman",
  "posts": [
   "fresh"
  ]
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestMerge/should_emit_merge_metadata_for_path_and_deep_merge_configs - 1]
{
 "component": "TestComponent",
 "deepMergeProps": [
  "settings"
 ],
 "matchPropsOn": [
  "conversation.messages.id",
  "settings.key"
 ],
 "mergeProps": [
  "posts",
  "conversation.messages"
 ],
 "prependProps": [
  "notifications"
 ],
 "props": {
  "conversation": {
   "messages": [
    "one"
   ]
  },
  "notifications": [
   "one"
  ],
  "posts": [
   "one"
  ],
  "settings": {
   "theme": "dark"
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestMerge/should_populate_prependProps_with_NewPrependRoot_for_root-only_prepend - 1]
{
 "component": "TestComponent",
 "prependProps": [
  "notifications"
 ],
 "props": {
  "notifications": [
   "one"
  ]
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestMerge/should_populate_mergeProps_with_NewAppendRoot_for_root-only_append_(single_prop) - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "posts"
 ],
 "props": {
  "posts": [
   "one"
  ]
 },
 "url": "/users",
 "version": "1.0.0"
}
---
